--- a/src/css/variables.scss
+++ b/src/css/variables.scss
@@ -1,3 +1,3 @@
-$activeBg = rgb(16,108,200);
-$activeText = #fff;
-$textColor = #444;
+$activeBg: rgb(16,108,200);
+$activeText: #fff;
+$textColor: #444;
