--- a/src/css/material.scss
+++ b/src/css/material.scss
@@ -2,6 +2,9 @@
 table {
   border-collapse: collapse;
   border-spacing: 0;
+
+  margin: 8px;
+  box-shadow: 0 1px 3px 0 rgba(0,0,0,.2),0 1px 1px 0 rgba(0,0,0,.14),0 2px 1px -1px rgba(0,0,0,.12);
 }
 :focus {
   outline: none;
@@ -66,12 +69,12 @@ table {
 }
 .table {
   td {
-    border-bottom: 1px rgba(0,0,0,.12) solid;
-    padding: 12px;
+    border-top: 1px rgba(0,0,0,.12) solid;
+    padding: 12px 24px;
   }
   th {
-    padding: 12px;
-    border-bottom: 1px rgba(0,0,0,.12) solid;
+    padding: 12px 24px;
+    border-top: 1px rgba(0,0,0,.12) solid;
   }
 }
 th.sortable {
