--- a/demo/demo.css
+++ b/demo/demo.css
@@ -1,93 +1,59 @@
-table {
-  border-collapse: collapse;
-  border-spacing: 0; }
-
-:focus {
-  outline: none; }
-
-.pagination {
-  display: inline-block;
+*, *:before, *:after {
   box-sizing: border-box; }
 
-.pagination > li {
-  display: inline-block;
-  vertical-align: middle;
-  width: auto;
-  height: 30px;
-  position: relative;
-  border-radius: 2px;
-  box-sizing: border-box; }
+body {
+  font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; }
 
-.pagination a {
-  color: #444;
-  font-size: 16px;
-  padding: 0 10px;
-  line-height: 30px;
-  display: inline-block;
-  text-decoration: none;
-  box-sizing: border-box; }
-  .pagination a .md-ripple-container {
-    border-radius: 2px; }
+h1 {
+  margin-top: 20px;
+  margin-bottom: 10px;
+  font-family: inherit;
+  font-weight: 500;
+  line-height: 1.1;
+  color: inherit;
+  font-size: 36px; }
 
-.pagination-none-svg svg {
-  display: none !important; }
+.container {
+  max-width: 1170px;
+  margin: 0 auto;
+  padding-right: 15px;
+  padding-left: 15px; }
 
-.pagination-none-svg .pagination-prev a,
-.pagination-none-svg .pagination-next a,
-.pagination-none-svg .pagination-first a,
-.pagination-none-svg .pagination-last a {
-  width: 30px;
-  text-align: center;
-  line-height: 24px; }
-
-.pagination-page {
-  transition: background .1s ease-out, color .1s ease-out; }
-  .pagination-page.active {
-    background: #106cc8; }
-    .pagination-page.active a {
-      color: #fff; }
-
-.pagination {
-  transition: background .1s ease-out, color .1s ease-out; }
-  .pagination .active {
-    background: #106cc8; }
-    .pagination .active a {
-      color: #fff; }
-
-.table td {
-  border-bottom: 1px rgba(0, 0, 0, 0.12) solid;
-  padding: 12px; }
-
-.table th {
-  padding: 12px;
-  border-bottom: 1px rgba(0, 0, 0, 0.12) solid; }
-
-th.sortable {
-  line-height: 24px;
-  padding-right: 31px; }
-  th.sortable svg {
-    height: 18px;
-    width: 18px;
-    margin: 0 4px;
-    transition: fill .25s,-webkit-transform .25s;
-    transition: fill .25s,transform .25s;
+.b-change-theme {
+  padding: 20px; }
+  .b-change-theme__link {
+    font-size: 16px;
+    line-height: 20px;
+    font-weight: 400;
+    color: #000;
+    display: inline-block;
     vertical-align: middle;
-    display: none !important; }
-  th.sortable.sort-descent {
-    padding-right: 0; }
-    th.sortable.sort-descent svg {
-      display: inline-block !important; }
-  th.sortable.sort-ascent {
-    padding-right: 0; }
-    th.sortable.sort-ascent svg {
-      display: inline-block !important;
-      -webkit-transform: rotate(180deg);
-      transform: rotate(180deg); }
-
-.items-per-page .active {
-  background: #106cc8; }
-  .items-per-page .active a {
-    color: #fff; }
-
-.items-per-page a {
-  cursor: pointer; }
+    text-decoration: none; }
+    .b-change-theme__link + .b-change-theme__link {
+      margin-left: 30px; }
+    .b-change-theme__link:before {
+      width: 20px;
+      height: 20px;
+      content: '';
+      border-radius: 2px;
+      border: 1px solid #999;
+      margin-right: 8px;
+      vertical-align: bottom;
+      display: inline-block; }
+    .b-change-theme__link:hover {
+      text-decoration: underline;
+      color: #000; }
+    .b-change-theme__link._active {
+      text-decoration: none;
+      position: relative; }
+      .b-change-theme__link._active:after {
+        content: '';
+        width: 12px;
+        height: 6px;
+        border-left: 2px solid #444;
+        border-bottom: 2px solid #444;
+        transform-origin: center;
+        transform: rotate(-45deg);
+        left: 4px;
+        top: 5px;
+        position: absolute; }
