--- a/demo/demo.css
+++ b/demo/demo.css
@@ -35,9 +35,9 @@ h1 {
       width: 20px;
       height: 20px;
       content: '';
-      border-radius: 2px;
       border: 1px solid #999;
       margin-right: 8px;
+      border-radius: 50%;
       vertical-align: bottom;
       display: inline-block; }
     .b-change-theme__link:hover {
@@ -46,14 +46,64 @@ h1 {
     .b-change-theme__link._active {
       text-decoration: none;
       position: relative; }
-      .b-change-theme__link._active:after {
-        content: '';
-        width: 12px;
-        height: 6px;
-        border-left: 2px solid #444;
-        border-bottom: 2px solid #444;
-        transform-origin: center;
-        transform: rotate(-45deg);
-        left: 4px;
-        top: 5px;
-        position: absolute; }
+      .b-change-theme__link._active:before {
+        box-shadow: inset 0 0 0 3px #fff;
+        background: #999; }
+
+.table td {
+  padding: 12px 24px !important;
+  vertical-align: middle !important; }
+
+.table th {
+  padding: 12px 24px !important;
+  vertical-align: middle !important; }
+
+th.sortable {
+  line-height: 24px;
+  position: relative; }
+  th.sortable.sort-descent:before {
+    content: '';
+    position: absolute;
+    left: 12px;
+    width: 2px;
+    background: #333;
+    height: 12px;
+    top: 0;
+    bottom: 0;
+    margin: auto 0; }
+  th.sortable.sort-descent:after {
+    content: '';
+    position: absolute;
+    left: 9px;
+    border-top: 2px solid #333;
+    border-left: 2px solid #333;
+    transform-origin: center;
+    transform: rotate(-135deg);
+    height: 8px;
+    width: 8px;
+    top: 6px;
+    bottom: 0;
+    margin: auto 0; }
+  th.sortable.sort-ascent:before {
+    content: '';
+    position: absolute;
+    left: 12px;
+    width: 2px;
+    background: #333;
+    height: 12px;
+    top: 0;
+    bottom: 0;
+    margin: auto 0; }
+  th.sortable.sort-ascent:after {
+    content: '';
+    position: absolute;
+    left: 9px;
+    border-top: 2px solid #333;
+    border-left: 2px solid #333;
+    transform-origin: center;
+    transform: rotate(45deg);
+    height: 8px;
+    width: 8px;
+    top: 0;
+    bottom: 6px;
+    margin: auto 0; }
