--- a/src/css/material.scss
+++ b/src/css/material.scss
@@ -3,6 +3,8 @@ table {
   border-collapse: collapse;
   border-spacing: 0;
 
+  width: 100%;
+  font-size: 16px;
   margin: 8px;
   box-shadow: 0 1px 3px 0 rgba(0,0,0,.2),0 1px 1px 0 rgba(0,0,0,.14),0 2px 1px -1px rgba(0,0,0,.12);
 }
@@ -52,7 +54,7 @@ table {
 .pagination-page {
   transition: background .1s ease-out, color .1s ease-out;
   &.active {
-    background: $activeBg;
+    background: $activeColor;
     a {
       color: $activeText;
     }
@@ -61,7 +63,7 @@ table {
 .pagination {
   transition: background .1s ease-out, color .1s ease-out;
   .active {
-    background: $activeBg;
+    background: $activeColor;
     a {
       color: $activeText;
     }
@@ -107,7 +109,7 @@ th.sortable {
 
 .items-per-page {
   .active {
-    background: $activeBg;
+    background: $activeColor;
     a {
       color: $activeText;
     }
@@ -115,4 +117,150 @@ th.sortable {
   a {
     cursor: pointer;
   }
+}
+
+.pagination-prev a {
+  font-size: 0;
+  width: 30px;
+  position: relative;
+  &:before {
+    left: 0;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    margin: auto;
+    position: absolute;
+    display: block;
+    width: 10px;
+    height: 10px;
+    content: '';
+    transform-origin:center;
+    border-left: 2px solid $iconsColor;
+    border-bottom: 2px solid $iconsColor;
+    transform: rotate(45deg);
+  }
+}
+.pagination-next a {
+  font-size: 0;
+  width: 30px;
+  position: relative;
+  &:before {
+    left: 0;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    margin: auto;
+    position: absolute;
+    display: block;
+    width: 10px;
+    height: 10px;
+    content: '';
+    transform-origin:center;
+    border-left: 2px solid $iconsColor;
+    border-bottom: 2px solid $iconsColor;
+    transform: rotate(-135deg);
+  }
+}
+.pagination-first a {
+  font-size: 0;
+  width: 30px;
+  position: relative;
+  &:before {
+    left: 0;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    margin: auto;
+    position: absolute;
+    display: block;
+    width: 10px;
+    height: 10px;
+    content: '';
+    transform-origin:center;
+    border-left: 2px solid $iconsColor;
+    border-bottom: 2px solid $iconsColor;
+    transform: rotate(45deg);
+  }
+  &:after {
+    left: 4px;
+    width: 2px;
+    height: 14px;
+    content: '';
+    top: 0;
+    bottom: 0;
+    position: absolute;
+    margin: auto 0;
+    background: $iconsColor;
+  }
+}
+.pagination-last a {
+  font-size: 0;
+  width: 30px;
+  position: relative;
+  &:before {
+    left: 0;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    margin: auto;
+    position: absolute;
+    display: block;
+    width: 10px;
+    height: 10px;
+    content: '';
+    transform-origin:center;
+    border-left: 2px solid $iconsColor;
+    border-bottom: 2px solid $iconsColor;
+    transform: rotate(-135deg);
+  }
+  &:after {
+    right: 4px;
+    width: 2px;
+    height: 14px;
+    content: '';
+    top: 0;
+    bottom: 0;
+    position: absolute;
+    margin: auto 0;
+    background: $iconsColor;
+  }
+}
+
+.form-group {
+  position: relative;
+}
+input:not([type]), input[type=text], input[type=password], input[type=email], input[type=url], input[type=time], input[type=date], input[type=datetime-local], input[type=tel], input[type=number], input[type=search], textarea.materialize-textarea {
+  background-color: transparent;
+  border: none;
+  border-bottom: 1px solid $textColor;
+  border-radius: 0;
+  outline: none;
+  height: 3rem;
+  width: 100%;
+  font-size: 1rem;
+  margin: 0 0 15px 0;
+  padding: 0;
+  box-shadow: none;
+  box-sizing: content-box;
+  transition: all .2s;
+  &:focus {
+    border-bottom: 1px solid $activeColor;
+    box-shadow: 0 1px 0 0 $activeColor;
+    &~.input-label{
+      -webkit-transform: translateY(-140%) scale(1);
+      transform: translateY(-140%) scale(1);
+      color: $activeColor;
+    }
+  }
+}
+.input-label {
+  color: $textColor;
+  position: absolute;
+  top: 0.8rem;
+  left: 0;
+  font-size: 1rem;
+  cursor: text;
+  transition: all .2s;
+  transform: scale(1.25);
+  transform-origin: left bottom;
 }
