--- a/src/css/demo.scss
+++ b/src/css/demo.scss
@@ -1,5 +1,9 @@
+@import 'variables';
 *, *:before, *:after {
   box-sizing: border-box;
+}
+:focus {
+  outline: none;
 }
 body {
   font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
@@ -57,6 +61,7 @@ h1 {
     }
   }
 }
+
 .table {
   td {
     padding: 12px 24px !important;
@@ -70,74 +75,53 @@ h1 {
 th.sortable {
   line-height: 24px;
   position: relative;
-  &.sort-descent {
-    &:before {
-      content: '';
-      position: absolute;
-      left: 12px;
-      width: 2px;
-      background: #333;
-      height: 12px;
-      top: 0;
-      bottom: 0;
-      margin: auto 0;
-    }
+  &.sort-descent,
+  &.sort-ascent {
+    &:before,
     &:after {
       content: '';
       position: absolute;
+      margin: auto 0;
+    }
+    &:before {
+      left: 12px;
+      width: 2px;
+      background: $backgroundIcons;
+      height: 12px;
+    }
+    &:after {
       left: 9px;
-      border-top: 2px solid #333;
-      border-left: 2px solid #333;
+      border-top: 2px solid $backgroundIcons;
+      border-left: 2px solid $backgroundIcons;
       transform-origin:center;
-      transform: rotate(-135deg);
       height: 8px;
       width: 8px;
-      top: 6px;
+    }
+  }
+  &.sort-descent {
+    &:before,
+    &:after {
       bottom: 0;
-      margin: auto 0;
+    }
+    &:before {
+      top: 0;
+    }
+    &:after {
+      transform: rotate(-135deg);
+      top: 6px;
     }
   }
   &.sort-ascent {
-    &:before {
-      content: '';
-      position: absolute;
-      left: 12px;
-      width: 2px;
-      background: #333;
-      height: 12px;
+    &:before,
+    &:after {
       top: 0;
+    }
+    &:before {
       bottom: 0;
-      margin: auto 0;
     }
     &:after {
-      content: '';
-      position: absolute;
-      left: 9px;
-      border-top: 2px solid #333;
-      border-left: 2px solid #333;
-      transform-origin:center;
       transform: rotate(45deg);
-      height: 8px;
-      width: 8px;
-      top: 0;
       bottom: 6px;
-      margin: auto 0;
     }
-  }
-}
-.col-wrap {
-  font-size: 0;
-  padding: 25px 0;
-  .col2 {
-    vertical-align: top;
-    display: inline-block;
-    width: 50%;
-    padding: 0 15px;
-  }
-  .col3 {
-    vertical-align: top;
-    display: inline-block;
-    width: 33.33%;
-    padding: 0 15px;
   }
 }
