--- a/src/css/variables.scss
+++ b/src/css/variables.scss
@@ -1,4 +1,4 @@
-$activeColor: rgb(16,108,200);
-$activeText: #fff;
-$textColor: #444;
-$iconsColor: #333;
+$backgroundActive: rgb(16,108,200);
+$foregroundActive: #fff;
+$foregroundDefault: #444;
+$backgroundIcons: #333;
