change project structure, update material theme

--- a/demo/material/scss/angular-data-grid.variables.scss
+++ b/demo/material/scss/angular-data-grid.variables.scss
@@ -1,4 +1,4 @@
-$backgroundActive: rgb(16,108,200);
+$backgroundActive: rgb(63, 81, 181);
 $foregroundActive: #fff;
 $foregroundDefault: #444;
 $backgroundIcons: #333;
