update bootstrap theme

--- a/demo/material/scss/angular-data-grid.material.scss
+++ b/demo/material/scss/angular-data-grid.material.scss
@@ -24,6 +24,7 @@ th md-select {
   padding: 0;
   font-size: 0;
   margin: 10px;
+  //display: inline-block;
   & > li{
     display: inline-block;
     vertical-align: middle;
