--- a/demo/material/scss/angular-data-grid.material.scss
+++ b/demo/material/scss/angular-data-grid.material.scss
@@ -5,7 +5,11 @@ a:focus {
   outline: none;
 }
 table {
-  margin: 0 auto 30px;
+  margin: 0 auto 20px;
+  min-width: 700px;
+}
+.mdl-data-table tr {
+  transition: none !important;
 }
 .max-width {
   max-width: 1170px;
@@ -13,8 +17,17 @@ table {
   padding: 0 16px;
   box-sizing: border-box;
 }
+.controls-wrap {
+  max-width: 700px;
+  margin: 0 auto 20px;
+  text-align: right;
+}
 th md-select {
   margin: 0;
+}
+.items {
+  float: left;
+  line-height: 30px;
 }
 .md-datepicker-input {
   width: 300px;
@@ -23,8 +36,7 @@ th md-select {
   box-shadow: 0 2px 2px 0 rgba(0,0,0,.14),0 3px 1px -2px rgba(0,0,0,.2),0 1px 5px 0 rgba(0,0,0,.12);
   padding: 0;
   font-size: 0;
-  margin: 10px;
-  //display: inline-block;
+  display: inline-block;
   & > li{
     display: inline-block;
     vertical-align: middle;
@@ -62,5 +74,20 @@ th md-select {
         color: $foregroundActive;
       }
     }
+  }
+}
+
+.sortable {
+  &:after {
+    font: 14px/1 FontAwesome;
+    content: "\f0dc";
+  }
+  &.sort-ascent:after {
+    content: '\f0de';
+    vertical-align: bottom;
+  }
+  &.sort-descent:after {
+    content: "\f0dd";
+    vertical-align: top;
   }
 }
