--- a/demo/material/scss/angular-data-grid.material.scss
+++ b/demo/material/scss/angular-data-grid.material.scss
@@ -1,13 +1,11 @@
 @import 'angular-data-grid.variables';
 
+th:focus,
 a:focus {
   outline: none;
 }
 .mdl-data-table {
   width: 100%;
-}
-.md-errors-spacer {
-  display: none;
 }
 .mdl-data-table tr {
   transition: none !important;
@@ -64,7 +62,6 @@ md-datepicker {
     }
   }
   &-page {
-    transition: background .1s ease-out, color .1s ease-out;
     &.active {
       background: $backgroundActive;
       a {
@@ -73,18 +70,44 @@ md-datepicker {
     }
   }
 }
-
+.material-icons {
+  font-family: 'Material Icons';
+  font-size: 18px;
+  -webkit-font-feature-settings: 'liga';
+  -webkit-font-smoothing: antialiased;
+}
 .sortable {
-  &:after {
-    font: 14px/1 FontAwesome;
-    content: "\f0dc";
+  span {
+    position: relative;
+    &:before {
+      @extend .material-icons;
+      content: 'arrow_drop_down';
+      position: absolute;
+      right: -18px;
+      top: -2px;
+    }
+    &:after {
+      @extend .material-icons;
+      content: 'arrow_drop_up';
+      position: absolute;
+      right: -18px;
+      top: -9px;
+    }
   }
-  &.sort-ascent:after {
-    content: '\f0de';
-    vertical-align: bottom;
+  &.sort-ascent {
+    span:before {
+      display: none;
+    }
+    span:after {
+      top: -5px
+    }
   }
-  &.sort-descent:after {
-    content: "\f0dd";
-    vertical-align: top;
+  &.sort-descent {
+    span:before {
+      top: -5px
+    }
+    span:after {
+      display: none;
+    }
   }
 }
