--- a/demo/material/scss/angular-data-grid.material.scss
+++ b/demo/material/scss/angular-data-grid.material.scss
@@ -27,6 +27,9 @@ md-datepicker {
 .md-datepicker-input-container {
   width: calc(100% - 76px);
 }
+.items-per-page {
+  width: 120px;
+}
 .pagination {
   box-shadow: 0 2px 2px 0 rgba(0,0,0,.14),0 3px 1px -2px rgba(0,0,0,.2),0 1px 5px 0 rgba(0,0,0,.12);
   padding: 0;
