--- a/demo/material/scss/angular-data-grid.material.scss
+++ b/demo/material/scss/angular-data-grid.material.scss
@@ -4,8 +4,14 @@ th:focus,
 a:focus {
   outline: none;
 }
+.codepen-wtap {
+  margin-top: 15px;
+}
 .mdl-data-table {
   width: 100%;
+  th {
+    cursor: pointer;
+  }
 }
 .mdl-data-table tr {
   transition: none !important;
@@ -13,25 +19,13 @@ a:focus {
 th md-select {
   margin: 0;
 }
-.layout-padding > .controls {
-  padding: 0;
-}
-md-datepicker {
-  margin-bottom: 18px;
-}
-.md-datepicker-label {
-  padding-left: 64px;
-  line-height: 14px;
-  color: rgba(0,0,0,0.26);
+.md-errors-spacer {
+  display: none;
 }
 .md-datepicker-input-container {
-  width: calc(100% - 76px);
-}
-.items-per-page {
-  width: 120px;
+  width: 100%;
 }
 .pagination {
-  box-shadow: 0 2px 2px 0 rgba(0,0,0,.14),0 3px 1px -2px rgba(0,0,0,.2),0 1px 5px 0 rgba(0,0,0,.12);
   padding: 0;
   font-size: 0;
   display: inline-block;
@@ -39,10 +33,10 @@ md-datepicker {
     display: inline-block;
     vertical-align: middle;
     height: 30px;
-    border: 1px solid #ddd;
+    border: 1px solid $foregroundPagination;
     border-left: 0;
     &:first-child {
-      border-left: 1px solid #ddd;
+      border-left: 1px solid $foregroundPagination;
       border-radius: 2px 0 0 2px;
     }
     &:last-child {
