--- a/demo/material/scss/angular-data-grid.variables.scss
+++ b/demo/material/scss/angular-data-grid.variables.scss
@@ -1,4 +1,5 @@
 $backgroundActive: rgb(63, 81, 181);
 $foregroundActive: #fff;
+$foregroundPagination: #ddd;
 $foregroundDefault: #444;
 $backgroundIcons: #333;
