change folder structure

--- a/demo/material/css/angular-data-grid.material.css
+++ b/demo/material/css/angular-data-grid.material.css
@@ -19,7 +19,8 @@ th md-select {
 .md-errors-spacer {
   display: none; }
 
-.md-datepicker-input-container {
+.md-datepicker-input-container,
+.md-datepicker-input {
   width: 100%; }
 
 .pagination {
