--- a/demo/material/scss/angular-data-grid.material.scss
+++ b/demo/material/scss/angular-data-grid.material.scss
@@ -22,7 +22,8 @@ th md-select {
 .md-errors-spacer {
   display: none;
 }
-.md-datepicker-input-container {
+.md-datepicker-input-container,
+.md-datepicker-input {
   width: 100%;
 }
 .pagination {
