--- a/demo/bootstrap/css/angular-data-grid.bootstrap.css
+++ b/demo/bootstrap/css/angular-data-grid.bootstrap.css
@@ -1,30 +1,23 @@
 .table > thead > tr > th {
-    vertical-align: middle;
-}
+  vertical-align: middle; }
 
 .margin-bottom-basic {
-    margin-bottom: 15px;
-}
+  margin-bottom: 15px; }
 
 .pagination {
-    margin: 0;
-}
+  margin: 0; }
 
 .items-per-page {
-    margin-left: 15px;
-}
+  margin-left: 15px; }
 
 .sortable:after {
-    font: 14px/1 FontAwesome;
-    content: "\f0dc";
-}
+  font: 14px/1 FontAwesome;
+  content: "\f0dc"; }
 
 .sortable.sort-ascent:after {
-    content: '\f0de';
-    vertical-align: bottom;
-}
+  content: '\f0de';
+  vertical-align: bottom; }
 
 .sortable.sort-descent:after {
-    content: "\f0dd";
-    vertical-align: top;
-}
+  content: "\f0dd";
+  vertical-align: top; }
