remove bootstrap.js

--- a/demo/bootstrap/scss/angular-data-grid.bootstrap.scss
+++ b/demo/bootstrap/scss/angular-data-grid.bootstrap.scss
@@ -1,7 +1,9 @@
 .table > thead > tr > th {
   vertical-align: middle;
 }
-
+.p-t-8 {
+  padding-top: 8px;
+}
 .margin-bottom-basic {
   margin-bottom: 15px;
 }
