--- a/demo/100k/css/angular-data-grid.bootstrap.css
+++ b/demo/100k/css/angular-data-grid.bootstrap.css
@@ -24,3 +24,21 @@
 .sortable.sort-descent:after {
   content: "\f0dd";
   vertical-align: top; }
+
+#loading-bar {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: rgba(0, 0, 0, 0.2);
+  z-index: 11002; }
+
+#loading-bar-spinner {
+  display: block;
+  position: fixed;
+  z-index: 11002;
+  top: 50%;
+  left: 50%;
+  margin-left: -15px;
+  margin-right: -15px; }
