--- a/demo/fixed-header/css/fixed-header.css
+++ b/demo/fixed-header/css/fixed-header.css
@@ -1,10 +1,10 @@
-.fixed {
+.fixed-header {
   top: 0;
   position: fixed;
   width: auto;
   display: table;
   z-index: 99; }
-  .fixed tr {
+  .fixed-header tr {
     background-color: #fff; }
 
 .tbody-offset:before {
