Fix Issue #29: Modifications to css for fixed-header

--- a/demo/fixed-header/css/angular-data-grid.bootstrap.css
+++ b/demo/fixed-header/css/angular-data-grid.bootstrap.css
@@ -24,3 +24,9 @@
 
 .fixed-header {
   border: none; }
+  .fixed-header tr {
+    background-color: #fff; }
+
+.tbody-offset:before {
+  color: white;
+  height: 60px; }
