--- a/demo/fixed-header/scss/bootstrap/angular-data-grid.bootstrap.scss
+++ b/demo/fixed-header/scss/bootstrap/angular-data-grid.bootstrap.scss
@@ -31,4 +31,14 @@
 
 .fixed-header {
   border: none;
+  tr {
+    background-color: #fff;
+  }
+}
+
+.tbody-offset {
+  &:before {
+    color: white;
+    height: 60px;
+  }
 }
