--- a/demo/fixed-header/scss/material-design/angular-data-grid.material.scss
+++ b/demo/fixed-header/scss/material-design/angular-data-grid.material.scss
@@ -108,4 +108,14 @@ th md-select {
 
 .fixed-header {
   border: 1px solid $borderColor;
+  tr {
+    background-color: #fff;
+  }
+}
+
+.tbody-offset {
+  &:before {
+    color: white;
+    height: 60px;
+  }
 }
