Fix Issue #29: Added documentation for fixed header to bootstrap sample

--- a/demo/fixed-header/css/fixed-header.bootstrap.css
+++ b/demo/fixed-header/css/fixed-header.bootstrap.css
@@ -6,3 +6,11 @@
 .tbody-offset:before {
   color: white;
   height: 60px; }
+
+.fixed-nav {
+  position: fixed;
+  width: 100%;
+  z-index: 5; }
+
+.padding-top-50 {
+  padding-top: 50px; }
