--- a/demo/fixed-header/scss/fixed-header.bootstrap.scss
+++ b/demo/fixed-header/scss/fixed-header.bootstrap.scss
@@ -12,3 +12,14 @@
     height: 60px;
   }
 }
+
+.fixed-nav {
+  position: fixed;
+  width: 100%;
+  z-index: 5;
+}
+
+.padding-top-50 {
+  padding-top: 50px;
+}
+
