Fix Issue #29: Applied changes to documentation.

--- a/demo/fixed-header/scss/fixed-header.bootstrap.scss
+++ b/demo/fixed-header/scss/fixed-header.bootstrap.scss
@@ -1,4 +1,4 @@
-//styles specific to bootstrap sample
+//styles specific to bootstrap sample (not required)
 .fixed-header {
   border: none;
   tr {
