--- a/demo/material/scss/angular-data-grid.variables.scss
+++ b/demo/material/scss/angular-data-grid.variables.scss
@@ -3,3 +3,4 @@ $foregroundActive: #fff;
 $foregroundPagination: #ddd;
 $foregroundDefault: #444;
 $backgroundIcons: #333;
+$backgroundArrows: #757575;
